hal/include/HAL/HAL.hpp

	int HALSetErrorData(const char *errors, int errorsLength, int wait_ms);
	int HALGetMatchTime(float *matchTime);
	bool HALGetSystemActive(int32_t *status);
	bool HALGetBrownedOut(int32_t *status);