wpilibj/wpilibJavaDevices/src/main/java/edu/wpi/first/wpilibj/communication/FRCNetworkCommunicationsLibrary.java


  public static native float HALGetMatchTime();

  public static native boolean HALGetSystemActive(IntBuffer status);

  public static native boolean HALGetBrownedOut(IntBuffer status);

  public static native int HALSetErrorData(String error);
}
